turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:7: error: ')' expected but ';' found.
	}else{ setCouleurBrosse(Color.white();
                                             ^